fix: aligning mission-vision text

--- a/src/assets/css/about.scss
+++ b/src/assets/css/about.scss
@@ -49,19 +49,21 @@
     display: flex;
     margin-bottom: 5rem;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .mission {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-    width: 50%;
+    justify-content: center;
+    width: 100%;
     border-radius: 50%;
     text-align: center;
+    height: 100vw;
     background-color: #f7f7f7;
-    aspect-ratio: 1 / 1;
+    aspect-ratio: 1/1;
 }
 
 .november-font {
@@ -71,9 +73,9 @@
 }
 
 .mission svg {
-    width: auto;
+    max-width: 100%;
     height: 115px;
-    padding-top: 2rem;
+    padding-top: 0rem;
 }
 .mission div {
     position: relative;
@@ -104,21 +106,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-    width: 50%;
+    justify-content: center;
+    width: 100%;
     border-radius: 50%;
-    margin-left: -50px;
+    margin-left: 0px;
+    margin-top: -50px;
+    height: 100vw;
     color: white;
     background-color: #2154D6;
     text-align: center;
-    aspect-ratio: 1 / 1;
-}
-
+    aspect-ratio: 1/1;
+  }
+  
 .vision svg {
-    width: auto;
+    max-width: 100%;
     height: 115px;
-    padding-top: 2rem;
-} 
+    padding-top: 0rem;
+  }
 
 .vision div {
     position: relative;
